--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [project]
-name = "tkfontawesome"
-version = "0.2.1"
+name = "tkfontawesome_mizraith"
+version = "0.3"
 authors = [{name = "Israel Dryer", email = "israel.dryer@gmail.com"}]
-description ="Use any of the 2k+ free FontAwesome icons in your tkinter application."
+description ="Use any of the 2k+ free FontAwesome icons in your tkinter application without the scikit bloatware."
 keywords = ["svg", "fontawesome", "icons", "tkinter", "ttk"]
 readme = "README.md"
 license = {file = "LICENSE"}
@@ -11,20 +11,24 @@ classifiers = [
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
 ]
-requires-python = ">=3.7"
+requires-python = ">=3.10"
 dependencies = [
-    "lxml==5.1.0",
+    "lxml==5.2.1",
     "tksvg==0.7.4"
 ]
 
 [project.urls]
-Homepage = "https://github.com/israel-dryer/tkfontawesome"
-Repository = "https://github.com/israel-dryer/tkfontawesome"
-Issues = "https://github.com/israel-dryer/tkfontawesome/issues"
+Homepage = "https://github.com/mizraith/TkFontAwesome"
+Repository = "https://github.com/mizraith/TkFontAwesome"
+Issues = "https://github.com/mizraith/TkFontAwesome/issues"
+
 
 [build-system]
-requires = ["setuptools", "scikit-build"]
-build-backend = "setuptools.build_meta"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+#[build-system]
+#requires = ["setuptools", "scikit-build"]
+#build-backend = "setuptools.build_meta"
 
 [tool.setuptools.packages.find]
-where = ["tkfontawesome/"]
+where = ["tkfontawesome_mizraith/"]
