ADDING IN PRE-BUILT wheels for Mac OS X and Linux since tksvg is broken and will not install via pip (or compile) as of early 2024.   If you are on those platforms you will have to manually select and install the correct wheel by using `pip install /path/to/correct.whl`

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,8 @@
 [project]
 name = "tkfontawesome_mizraith"
 version = "0.3"
-authors = [{name = "Israel Dryer", email = "israel.dryer@gmail.com"}]
+authors = [{name = "Israel Dryer", email = "israel.dryer@gmail.com"},
+    {name = "Red Byer", email = "rojo09@redstoyland.com"}]
 description ="Use any of the 2k+ free FontAwesome icons in your tkinter application without the scikit bloatware."
 keywords = ["svg", "fontawesome", "icons", "tkinter", "ttk"]
 readme = "README.md"
